feat: Delete usage of Application Registry for Space Templates - MEED-6903 - Meeds-io/MIPs#139 (#3834)
Prior to this change, the Application Registry was used to retrieve the
portlets list that are available in platform. This change will delete
the usage of it, that was for caching purpose, to allow managing
portlets in a dedicated addon. In addition, the space applications list
management will be made in the layout addon as well, thus the spaces
applications administration has bee deleted as well.